# CG_36_Begis

./: 10_17_2_Begis.html  10_17_3_Begis.html  10_17_4_Begis.html  3_triangle_path.html  4_width.html  5_color_stroke.html  6-1_stroke-fill.html  6_fill.html  7_arc.html  8_point (1).html  9_vertices.html  CMakeLists.txt  Gauss_ogl.odt  README.md  Readme.md  documentatiion.txt  main  main.cpp  scene3  scene4  test.cpp  test2.cpp  test_1.cpp
Cube_lighting_Begis_Maulenbergenov/: cube.cpp
Gauss_ogl_Begis_Maulenbergenov/: Gauss_ogl.odt
Gauss_ogl_Begis_Maulenbergenov/Python_Gauss_ogl/: Readme.md
Gauss_ogl_Begis_Maulenbergenov/step_1/: step1.cpp
Gauss_ogl_Begis_Maulenbergenov/step_4/: step4.cpp
Gauss_ogl_Begis_Maulenbergenov/step_5/: step5.cpp
PythonOpenGL/: Readme.md  animation.py  main.py
PythonOpenGL/Cube_Python/: README.md  cube.py
PythonOpenGL/scene1/: scene1.py
PythonOpenGL/scene2/: scene2.py
PythonOpenGL/scene3/: scene3.py
PythonOpenGL/scene4/: scene4.py
PythonOpenGL/step_1/: step_1.py
PythonOpenGL/step_4/: step_4.py
PythonOpenGL/step_5/: step_5.py
Scenes_3D_Begis_Maulenbergenov/: Scenes_3D.odt  documentation.txt
Scenes_3D_Begis_Maulenbergenov/scene1/: scene1  scene1.cpp
Scenes_3D_Begis_Maulenbergenov/scene2/: scene2  scene2.cpp
Scenes_3D_Begis_Maulenbergenov/scene3/: scene3.cpp
Scenes_3D_Begis_Maulenbergenov/scene4/: scene4.cpp
animation/: animation.cpp  animation_
c1/: cylinder_1.cpp
step_1/: step1
step_2/: step2  step2.cpp
step_3/: step3
step_4/: step4  step4.cpp
step_5/: step5  step5.cpp
(+3 files in other folders)
